syntax = "proto3";

package common.access_control;

option go_package = "/common";

// AccessControlPolicy specifies a set of data that can be accessed by some
// SecurityGroup
message AccessControlPolicy {
  string securityDomain = 1;
  repeated Rule rules = 2;
}

// Rule represents a single data access rule for the AccessControlPolicy
message Rule {
  string principal = 1;
  string principalType = 2;
  string resource = 3;
  bool read = 4;
}
