syntax = "proto3";

package common.interop_payload;

option java_package = "com.weaver.protos.common.interop_payload";
option go_package = "github.com/hyperledger-labs/weaver-dlt-interoperability/common/protos-go/common";

message InteropPayload {
  bytes payload = 1;
  string address = 2;
}
